<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_title_home" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/nav_title_download_asset" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/nav_title_stock_taking" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/nav_title_upload_asset" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_title_location" />
        <item
            android:id="@+id/nav_uploaded"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_title_uploaded_asset" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_title_exit" />
    </group>
</menu>