<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/dp_40"
    android:paddingRight="@dimen/dp_40"
    tools:context=".ui.GetLicenseActivity">


    <RelativeLayout
        android:id="@+id/app_no_license_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_no_license"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_no_license" />

        <TextView
            android:id="@+id/text_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_no_license"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/error_no_license" />

        <TextView
            android:id="@+id/textView3"
            style="@style/ColorViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_license"
            android:layout_marginTop="28dp"
            android:text="@string/err_no_license" />

        <Button
            android:id="@+id/button_license"
            style="@style/GreenButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/btn_text_license" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/license_request_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_license"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_license_request" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_loginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_license"
            android:layout_marginTop="@dimen/dp_48">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/license_loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_loginId"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_loginId"
            android:layout_marginTop="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/license_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_license"
            style="@style/GreenButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_password"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_40"
            android:onClick="GetLicense"
            android:text="@string/btn_text_license" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/license_request_pending_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_license_request_pending"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_request_pending" />

        <TextView
            android:id="@+id/text_license_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_license_request_pending"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/error_license_request" />

        <TextView
            style="@style/ColorViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_license_request"
            android:layout_marginTop="28dp"
            android:text="@string/err_contact_administrator" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/license_request_fail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_license_request_fail"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_request_fail" />

        <TextView
            android:id="@+id/text_license_request_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_license_request_fail"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/error_license_request_fail" />

        <TextView
            style="@style/ColorViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_license_request_fail"
            android:layout_marginTop="28dp"
            android:text="@string/err_contact_administrator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_extra_license_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_no_extra_license"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_no_extra_license" />

        <TextView
            android:id="@+id/text_no_extra_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_no_extra_license"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/error_no_extra_license" />

        <TextView
            style="@style/ColorViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_no_extra_license"
            android:layout_marginTop="28dp"
            android:text="@string/err_contact_administrator" />
    </RelativeLayout>

</RelativeLayout>