<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_40"
    android:paddingRight="@dimen/dp_40"
    tools:context=".ui.GetRegisterActivity">

    <RelativeLayout
        android:id="@+id/app_no_register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_no_register"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_no_register" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_no_register"
            android:layout_marginTop="48dp"
            android:text="@string/error_no_register"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/ColorViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_register"
            android:layout_marginTop="28dp"
            android:text="@string/err_no_register" />

        <Button
            android:id="@+id/button_register"
            style="@style/GreenButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/btn_text_register" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_register"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_registration" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_register"
            android:layout_marginTop="@dimen/dp_48">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_device_name"
                android:inputType="text"
                android:maxLength="31"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_loginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_device_name"
            android:layout_marginTop="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_loginId"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_loginId"
            android:layout_marginTop="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/GreenButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_password"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_40"
            android:onClick="GetRegister"
            android:text="@string/btn_text_register" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_register_fail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_register_fail"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register_fail" />

        <TextView
            android:id="@+id/text_fail_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_fail"
            android:layout_marginTop="48dp"
            android:text="@string/error_fail_register"
            android:textSize="14sp" />

        <TextView
            style="@style/ColorViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fail_register"
            android:layout_marginTop="28dp"
            android:text="@string/err_contact_administrator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/device_inactive_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_device_in_active"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_device_inactive" />

        <TextView
            android:id="@+id/text_device_in_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_device_in_active"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/error_device_inactive" />

        <TextView
            style="@style/ColorViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_device_in_active"
            android:layout_marginTop="28dp"
            android:text="@string/err_contact_administrator" />

    </RelativeLayout>
</RelativeLayout>