<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/dp_16"
    android:paddingTop="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_16"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="45dp"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/text_setting"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fams"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/title_stock_taker"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/text_loginId"
                android:inputType="text"
                android:maxLength="26"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:fitsSystemWindows="false"
                    android:hint="@string/text_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="26"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/img_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/img_visible"
                android:src="@drawable/ic_invisible"
                android:visibility="visible" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/txt_buttonLogin"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>